--- a/src/Modules/MasterModule/Properties/Resources.en-US.resx
+++ b/src/Modules/MasterModule/Properties/Resources.en-US.resx
@@ -162,4 +162,19 @@
   <data name="Móvil" xml:space="preserve">
     <value>Cellphone</value>
   </data>
+  <data name="NoDefinido" xml:space="preserve">
+    <value>Not Defined</value>
+  </data>
+  <data name="EstaciónDeTren" xml:space="preserve">
+    <value>Train Station</value>
+  </data>
+  <data name="AdmiteReservaONLine" xml:space="preserve">
+    <value>Allow Online Booking</value>
+  </data>
+  <data name="EmailConfirmedRes" xml:space="preserve">
+    <value>Confirmed Email </value>
+  </data>
+  <data name="DatosEmpresa" xml:space="preserve">
+    <value>Company Data</value>
+  </data>
 </root>
