--- a/src/KarveLocale/Properties/Resources.en-US.resx
+++ b/src/KarveLocale/Properties/Resources.en-US.resx
@@ -1601,7 +1601,7 @@
     <value>Assurance Type</value>
   </data>
   <data name="lulfechamantenimento" xml:space="preserve">
-    <value>Last.Date.Maint.</value>
+    <value>Last Data Maintainance</value>
   </data>
   <data name="lstretprice" xml:space="preserve">
     <value>Selling Price</value>
@@ -2241,5 +2241,29 @@
   </data>
   <data name="Elenco" xml:space="preserve">
     <value>List</value>
+  </data>
+  <data name="AdmiteReservaOFFLine" xml:space="preserve">
+    <value>Allow Offline Booking</value>
+  </data>
+  <data name="AdmiteReservaOnline" xml:space="preserve">
+    <value>Allow Online Booking</value>
+  </data>
+  <data name="Bloqueado" xml:space="preserve">
+    <value>Blocked</value>
+  </data>
+  <data name="ltipovisita" xml:space="preserve">
+    <value>Visit Type</value>
+  </data>
+  <data name="LugarDeEntregas" xml:space="preserve">
+    <value>Delivering Places</value>
+  </data>
+  <data name="BudgetKey_ClaveDePresuppuesto" xml:space="preserve">
+    <value>Budget Key</value>
+  </data>
+  <data name="VehiclesControlViewModel_NewItem_NuevoVehiculos" xml:space="preserve">
+    <value>New Vehicle</value>
+  </data>
+  <data name="DatosEmpresa" xml:space="preserve">
+    <value>Company data</value>
   </data>
 </root>
