--- a/src/KarveLocale/Properties/Resources.en-GB.resx
+++ b/src/KarveLocale/Properties/Resources.en-GB.resx
@@ -2257,4 +2257,10 @@
   <data name="DatosEmpresa" xml:space="preserve">
     <value>Company Data</value>
   </data>
+  <data name="KarveToolBarViewModel_QuieresBorrarElRegistro" xml:space="preserve">
+    <value>Do you want to delete the record?</value>
+  </data>
+  <data name="webUser" xml:space="preserve">
+    <value>Web uiser</value>
+  </data>
 </root>
