--- a/src/KarveLocale/Properties/Resources.en-US.resx
+++ b/src/KarveLocale/Properties/Resources.en-US.resx
@@ -2338,4 +2338,7 @@
   <data name="ListadoDeVehiculos" xml:space="preserve">
     <value>Vehicle List</value>
   </data>
+  <data name="lnameproprietario" xml:space="preserve">
+    <value>Owner Name</value>
+  </data>
 </root>
