--- a/src/KarveLocale/Properties/Resources.es-ES.resx
+++ b/src/KarveLocale/Properties/Resources.es-ES.resx
@@ -2373,4 +2373,10 @@
   <data name="ListadoDeVehiculos" xml:space="preserve">
     <value>Listado de Vehiculos</value>
   </data>
+  <data name="lnameproprietario" xml:space="preserve">
+    <value>Nombre Propietario</value>
+  </data>
+  <data name="ListaDeConductores" xml:space="preserve">
+    <value>Listado conductores</value>
+  </data>
 </root>
