--- a/src/KarveLocale/Properties/Resources.it-IT.resx
+++ b/src/KarveLocale/Properties/Resources.it-IT.resx
@@ -2699,4 +2699,7 @@
   <data name="ListadoDeVehiculos" xml:space="preserve">
     <value>Lista di Veiculi</value>
   </data>
+  <data name="lnameproprietario" xml:space="preserve">
+    <value>Nome propietario</value>
+  </data>
 </root>
