--- a/src/KarveLocale/Properties/Resources.resx
+++ b/src/KarveLocale/Properties/Resources.resx
@@ -2796,4 +2796,7 @@
   <data name="ListadoDeVehiculos" xml:space="preserve">
     <value>Lista de vehiculos</value>
   </data>
+  <data name="lnameproprietario" xml:space="preserve">
+    <value>Nombre Propietario</value>
+  </data>
 </root>
