--- a/src/KarveLocale/Properties/Resources.it-IT.resx
+++ b/src/KarveLocale/Properties/Resources.it-IT.resx
@@ -1854,7 +1854,7 @@
     <value>Referenza</value>
   </data>
   <data name="lproximarevisionkm" xml:space="preserve">
-    <value>Km. Prossima Revisione</value>
+    <value>Km. Pros. Revisione</value>
   </data>
   <data name="lvehiculoproprio" xml:space="preserve">
     <value>Veicolo proprietario</value>
@@ -2701,5 +2701,14 @@
   </data>
   <data name="lnameproprietario" xml:space="preserve">
     <value>Nome propietario</value>
+  </data>
+  <data name="lowner" xml:space="preserve">
+    <value>Proprietario</value>
+  </data>
+  <data name="lcreditcardtype" xml:space="preserve">
+    <value>Tipo carta de credito</value>
+  </data>
+  <data name="OpcionCliente" xml:space="preserve">
+    <value>Opzioni Cliente</value>
   </data>
 </root>
