--- a/src/KarveLocale/Properties/Resources.resx
+++ b/src/KarveLocale/Properties/Resources.resx
@@ -1835,7 +1835,7 @@
     <value>Delegacion</value>
   </data>
   <data name="lsituacion" xml:space="preserve">
-    <value>Situacion</value>
+    <value>Situación</value>
   </data>
   <data name="lcontracto" xml:space="preserve">
     <value>Contracto</value>
@@ -2798,5 +2798,20 @@
   </data>
   <data name="lnameproprietario" xml:space="preserve">
     <value>Nombre Propietario</value>
+  </data>
+  <data name="lowner" xml:space="preserve">
+    <value>Proprietario</value>
+  </data>
+  <data name="lreplacementcar" xml:space="preserve">
+    <value></value>
+  </data>
+  <data name="lcreditcardtype" xml:space="preserve">
+    <value>Tipo Tarjeta de Credito</value>
+  </data>
+  <data name="OpcionCliente" xml:space="preserve">
+    <value>Opcion Cliente</value>
+  </data>
+  <data name="lloaddocument" xml:space="preserve">
+    <value>Adquirir..</value>
   </data>
 </root>
