--- a/src/KarveLocale/Properties/Resources.en-GB.resx
+++ b/src/KarveLocale/Properties/Resources.en-GB.resx
@@ -2476,4 +2476,16 @@
   <data name="lmoroso" xml:space="preserve">
     <value>Defaulter</value>
   </data>
+  <data name="lshowing" xml:space="preserve">
+    <value>Showing</value>
+  </data>
+  <data name="lof" xml:space="preserve">
+    <value>Of</value>
+  </data>
+  <data name="ldepartureworkshop" xml:space="preserve">
+    <value>Departure Workshop</value>
+  </data>
+  <data name="ldepartureplace" xml:space="preserve">
+    <value>Departure Place</value>
+  </data>
 </root>
