- Booking last tab creation. - Modified small driver control - Nodified booking view model for other data. - Added new data objects for Employee Agency 	modified:   KarveDapper/KarveDapper.csproj 	deleted:    build.py 	modified:   documentation/KarveCarModels.simp 	modified:   src/Controls/KarveControls/DataArea/DataArea.cs 	modified:   src/Controls/KarveControls/DataField/DataField.cs 	deleted:    src/Controls/KarveControls/DriverSmallControl/DriverSmallControl.xaml 	deleted:    src/Controls/KarveControls/DriverSmallControl/DriverSmallControl.xaml.cs 	modified:   src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml 	modified:   src/Controls/KarveControls/DualFieldSearchBox/DualFieldSearchBox.cs 	modified:   src/Controls/KarveControls/HeaderedWindow/HeaderedWindow.xaml 	modified:   src/Controls/KarveControls/KarveCar.Controls.csproj 	modified:   src/Controls/KarveControls/KarveTabItemExt.cs 	modified:   src/Controls/KarveControls/TestUIObjects/TestMainWindow.xaml 	modified:   src/Controls/KarveControls/TestUIObjects/TestingViewsModels/TestMainWindowViewModel.cs 	modified:   src/Controls/KarveControls/Themes/Generic.xaml 	modified:   src/Controls/KarveControls/ViewModels/HeaderedLineViewModelBase.cs 	modified:   src/KarveCar.csproj 	modified:   src/KarveCommon/Generic/KarveControlViewModel.cs 	modified:   src/KarveCommon/KarveCar.Common.csproj 	modified:   src/KarveCommon/Services/IEventManager.cs 	modified:   src/KarveLocale/Properties/Resources.Designer.cs 	modified:   src/KarveLocale/Properties/Resources.de-DE.resx 	modified:   src/KarveLocale/Properties/Resources.en-GB.resx 	modified:   src/KarveLocale/Properties/Resources.en-US.resx 	modified:   src/KarveLocale/Properties/Resources.es-ES.resx 	modified:   src/KarveLocale/Properties/Resources.it-IT.resx 	modified:   src/KarveLocale/Properties/Resources.resx 	modified:   src/Modules/BookingModule/BookingModule.csproj 	modified:   src/Modules/BookingModule/ViewModels/BookingControlViewModel.cs 	modif

--- a/src/KarveLocale/Properties/Resources.de-DE.resx
+++ b/src/KarveLocale/Properties/Resources.de-DE.resx
@@ -2904,6 +2904,27 @@
     <value>Zusätzlicher Fahrer</value>
   </data>
   <data name="lsndadditionaldriver" xml:space="preserve">
-    <value>Zweiter zusätzlicher Treiber</value>
+    <value>Zweiter Fahrer</value>
+  </data>
+  <data name="lbirthday" xml:space="preserve">
+    <value>Geburstag</value>
+  </data>
+  <data name="lrdadditionaldriver" xml:space="preserve">
+    <value>Dritter Fahrer</value>
+  </data>
+  <data name="lsnddriver" xml:space="preserve">
+    <value>Zweiter Fahrer</value>
+  </data>
+  <data name="lmiss" xml:space="preserve">
+    <value>Fraul.</value>
+  </data>
+  <data name="lmrs" xml:space="preserve">
+    <value>Frau.</value>
+  </data>
+  <data name="ldr" xml:space="preserve">
+    <value>Dr.</value>
+  </data>
+  <data name="lmr" xml:space="preserve">
+    <value>Herr</value>
   </data>
 </root>
