--- a/src/KarveLocale/Properties/Resources.it-IT.resx
+++ b/src/KarveLocale/Properties/Resources.it-IT.resx
@@ -2939,4 +2939,28 @@
   <data name="lsndadditionaldriver" xml:space="preserve">
     <value>Secondo Conducente</value>
   </data>
+  <data name="lbirthday" xml:space="preserve">
+    <value>Data di Nascita</value>
+  </data>
+  <data name="lnumpermiso" xml:space="preserve">
+    <value>Numero Patente</value>
+  </data>
+  <data name="lrdadditionaldriver" xml:space="preserve">
+    <value>Terzo Conducente</value>
+  </data>
+  <data name="lsnddriver" xml:space="preserve">
+    <value>Secundo Conductor</value>
+  </data>
+  <data name="lmiss" xml:space="preserve">
+    <value>Signorina</value>
+  </data>
+  <data name="lmrs" xml:space="preserve">
+    <value>Sig.ra</value>
+  </data>
+  <data name="ldr" xml:space="preserve">
+    <value>Dr.</value>
+  </data>
+  <data name="lmr" xml:space="preserve">
+    <value>Sig.</value>
+  </data>
 </root>
