- Added new magnifier and relative object to the booking info view model. - Added booking info view model to Bootstrapper.cs - Deleted MainWindow1.xaml - Added new strings to localize. - Added a new navigator factory.

--- a/src/KarveLocale/Properties/Resources.en-GB.resx
+++ b/src/KarveLocale/Properties/Resources.en-GB.resx
@@ -2605,4 +2605,10 @@
   <data name="lmr" xml:space="preserve">
     <value>Mr.</value>
   </data>
+  <data name="lbookingmedia" xml:space="preserve">
+    <value>Booking Media</value>
+  </data>
+  <data name="lbookingtype" xml:space="preserve">
+    <value>Booking Type</value>
+  </data>
 </root>
