--- a/src/KarveLocale/Properties/Resources.resx
+++ b/src/KarveLocale/Properties/Resources.resx
@@ -3077,7 +3077,7 @@
     <value>Miss</value>
   </data>
   <data name="lmr" xml:space="preserve">
-    <value>Mr.</value>
+    <value>Señor</value>
   </data>
   <data name="ldr" xml:space="preserve">
     <value>Doctor</value>
@@ -3087,5 +3087,20 @@
   </data>
   <data name="lauthpending" xml:space="preserve">
     <value>Pendiente de Autorizar</value>
+  </data>
+  <data name="lbookingmedia" xml:space="preserve">
+    <value>Medio</value>
+  </data>
+  <data name="lbookingtype" xml:space="preserve">
+    <value>Tipo Reserva</value>
+  </data>
+  <data name="lagencyemployee" xml:space="preserve">
+    <value>Empleado Ag.</value>
+  </data>
+  <data name="lprintingtype" xml:space="preserve">
+    <value>Tipo de Impreso</value>
+  </data>
+  <data name="lvehicles" xml:space="preserve">
+    <value>Vehiculos</value>
   </data>
 </root>
