--- a/src/KarveLocale/Properties/Resources.en-US.resx
+++ b/src/KarveLocale/Properties/Resources.en-US.resx
@@ -2608,4 +2608,10 @@
   <data name="lmr" xml:space="preserve">
     <value>Mr.</value>
   </data>
+  <data name="lbookingmedia" xml:space="preserve">
+    <value>Booking Media</value>
+  </data>
+  <data name="lbookingtype" xml:space="preserve">
+    <value>Booking Type</value>
+  </data>
 </root>
